Fix Images overlapping Navbar

--- a/Frontend/src/app/home/home.component.scss
+++ b/Frontend/src/app/home/home.component.scss
@@ -193,6 +193,7 @@ a {
   top: 0;
   left: 0;
   width: 100% !important;
+  z-index: 1000;
 }
 
 .mat-icon {
